--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
         <div id="toastProgress" class="toast-progress"></div>
     </div>
 
-    <button id="scrollTopBtn" title="גלול למעלה">⬆️</button>
+    <button id="scrollTopBtn" title="גלול למעלה">☝️</button>
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
@@ -614,7 +614,7 @@
                 <div class="card-footer">
                     <div><span class="tag-category">${escapeHtml(item.category)}</span><span class="duplicate-badge" style="display:${item.isDup ? 'inline' : 'none'}">כפול</span></div>
                     <div class="card-actions">
-                        <button class="icon-btn btn-share" title="שתף">📤</button>
+                        <button class="icon-btn btn-share" title="שתף">🔗</button>
                         <button class="icon-btn btn-copy" title="העתק">📋</button>
                         <button class="icon-btn btn-edit" title="ערוך">✏️</button>
                         <button class="icon-btn pin-btn ${item.isPinned ? 'active' : ''}" title="נעץ">📌</button>
@@ -869,3 +869,4 @@
     </script>
 </body>
 </html>
+
