--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         </div>
 
         <details class="glass-panel">
-            <summary>הוספת פריט חדש ידנית</summary>
+            <summary>▼ הוספת פריט חדש ידנית ▼</summary>
             <form id="addItemForm">
                 <textarea id="itemContent" rows="2" required placeholder="הדבק כאן קישור או פקודה..."></textarea>
                 <input type="text" id="itemDescription" placeholder="תיאור הפריט">
@@ -868,6 +868,7 @@
     </script>
 </body>
 </html>
+
 
 
 
