--- a/index.html
+++ b/index.html
@@ -167,6 +167,10 @@
     </style>
 </head>
 <body class="dark-mode">
+    <div id="devtools-overlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:#090a0a; color:white; z-index:999999; text-align:center; padding-top:20%; font-family:monospace; flex-direction:column; align-items:center;">
+        <h1 style="font-size:2.5rem; margin-bottom:20px;">DevTools detected! Access denied.</h1>
+        <p>This area is restricted.</p>
+    </div>
 
     <header>
         <h1>Link Manager Pro</h1>
@@ -873,9 +877,49 @@
             t.classList.add('visible');
             toastTimeout = setTimeout(() => { t.classList.remove('visible'); }, 10000);
         }
+        // --- אבטחה נגד DevTools ---
+    const ADMIN_EMAIL = "meirhadad74@gmail.com"; // ⚠️ שנה לאימייל שלך בדיוק!
+
+    function checkDevTools() {
+        // אם זה האדמין - שחרר הכל
+        if (state.user && state.user.email === ADMIN_EMAIL) {
+            document.getElementById('devtools-overlay').style.display = 'none';
+            return;
+        }
+
+        // הגדרות זיהוי
+        const threshold = 160;
+        const widthThreshold = window.outerWidth - window.innerWidth > threshold;
+        const heightThreshold = window.outerHeight - window.innerHeight > threshold;
+        
+        // בדיקה אם הכלים פתוחים
+        if ((widthThreshold || heightThreshold) && !document.fullscreenElement) {
+            document.getElementById('devtools-overlay').style.display = 'flex';
+            // דיבאגר שתוקע את הדפדפן למי שלא אדמין
+            debugger; 
+        } else {
+            document.getElementById('devtools-overlay').style.display = 'none';
+        }
+    }
+
+    // הפעלת הבדיקה כל שנייה
+    setInterval(checkDevTools, 1000);
+
+    // חסימת מקשים (F12, עכבר ימני וכו')
+    document.addEventListener('contextmenu', e => {
+        if (!state.user || state.user.email !== ADMIN_EMAIL) e.preventDefault();
+    });
+    
+    document.addEventListener('keydown', e => {
+        if (state.user && state.user.email === ADMIN_EMAIL) return;
+        if (e.key === 'F12' || (e.ctrlKey && e.shiftKey && (e.key === 'I' || e.key === 'J' || e.key === 'C')) || (e.ctrlKey && e.key === 'u')) {
+            e.preventDefault();
+        }
+    });
     </script>
 </body>
 </html>
+
 
 
 
