--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
                 <div class="card-footer">
                     <div><span class="tag-category">${escapeHtml(item.category)}</span><span class="duplicate-badge" style="display:${item.isDup ? 'inline' : 'none'}">כפול</span></div>
                     <div class="card-actions">
-                        <button class="icon-btn btn-share" title="שתף">🔗</button>
+                        <button class="icon-btn btn-share" title="שתף"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="18" cy="5" r="3"></circle><circle cx="6" cy="12" r="3"></circle><circle cx="18" cy="19" r="3"></circle><line x1="8.59" y1="13.51" x2="15.42" y2="17.49"></line><line x1="15.41" y1="6.51" x2="8.59" y2="10.49"></line></svg></button>
                         <button class="icon-btn btn-copy" title="העתק">📋</button>
                         <button class="icon-btn btn-edit" title="ערוך">✏️</button>
                         <button class="icon-btn pin-btn ${item.isPinned ? 'active' : ''}" title="נעץ">📌</button>
@@ -919,6 +919,7 @@
     </script>
 </body>
 </html>
+
 
 
 
