--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
 
     <div id="welcomeScreen" class="visible">
         <div class="lock-icon">🔒</div>
+         <h2>ברוך הבא לאתר של MH</h2>
         <h2>הנתונים מוגנים</h2>
         <p>כדי לשמור על פרטיותך, הקישורים נטענים מהענן בלבד.</p>
         <p>בעת יציאה (Logout) הכל נמחק מהמכשיר.</p>
@@ -271,7 +272,7 @@
         <label for="smartImportInput">🔄 <b>ייבוא חכם (מיזוג)</b></label>
         <input type="file" id="smartImportInput" accept=".txt">
         <div class="dropdown-divider"></div>
-        <label for="wipeDataInput" style="color: var(--accent-red);">⚠️ <b>מחק הכל (העלה קובץ ריק)</b></label>
+        <label for="wipeDataInput" style="color: var(--accent-red);">⚠️ <b>מחק הכל(קובץ ריק)</b></label>
         <input type="file" id="wipeDataInput" accept=".txt">
     </div>
 </div>
@@ -285,7 +286,7 @@
                 </div>
 
                 <button id="trashBtn" class="action-btn btn-trash-view" title="סל מחזור">🗑️ סל מחזור</button>
-                <button id="toggleDuplicatesBtn" class="action-btn btn-toggle" title="הצג/הסתר כפילויות">⚠️</button>
+                <button id="toggleDuplicatesBtn" class="action-btn btn-toggle" title="הצג/הסתר כפילויות">👥</button>
                 <button id="toggleDarkModeBtn" class="action-btn btn-toggle" title="מצב לילה">☀️</button>
             </div>
         </div>
@@ -1343,6 +1344,7 @@ async function copyText(t) {
     </script>
 </body>
 </html>
+
 
 
 
